# kaia-api

./: .env  Dockerfile  docker-compose.yml  kaia.db  main.py  pyproject.toml
.github/workflows/: publish.yaml
database/: connection.py
models/: answer.py  auth.py  question.py  quiz.py
schemas/: answer.py  base.py  question.py  quiz.py  user.py
