[tool.poetry]
name = "kaia"
version = "0.1.0"
description = "App quiz"
authors = ["Jhonathan <nathan3boss@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
